# clippit

./: Cargo.toml  README.md
.github/workflows/: test.yml
clippit/: Cargo.toml
clippit/fuzz/: Cargo.toml
clippit/src/: lib.rs  main.rs
clippy-output/: Cargo.toml  README.md
clippy-output/fuzz/: Cargo.toml
clippy-output/fuzz/fuzz_targets/: clippy-output.rs
clippy-output/src/: lib.rs  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: replace_words.rs
problematic-code/: Cargo.toml  README.md
problematic-code/src/: main.rs
src/: clippit_art.rs  lib.rs  main.rs
