[package]
name = "clippit"
version = "0.3.0"
authors = ["Makoto <makoto@emurasoft.com>"]
edition = "2021"
documentation = "https://docs.rs/clippit/"
license = "MIT"
description = "clippit makes cargo clippy sound like Office 2003's Clippit assistant (aka Clippy)."
repository = "https://github.com/MakotoE/clippy-output"
readme = "../README.md"

[dependencies]
anyhow = "1.0"
terminal_size = "0.2"
regex = "1.5"
textwrap = "0.16"

[dev-dependencies]
rstest = "0.18"

[profile.release]
lto = true
codegen-units = 1