[package]
name = "clippit"
version = "0.2.0"
authors = ["Makoto <makoto@emurasoft.com>"]
edition = "2018"
documentation = "https://docs.rs/clippit/"
license = "MIT"
description = "clippit makes cargo clippy sound like Office 2003's Clippit assistant (aka Clippy)."
repository = "https://github.com/MakotoE/clippy-output"
readme = "../README.md"

[dependencies]
anyhow = "1.0"
terminal_size = "0.1"
clippy-output = { version = "0.2", path = "../clippy-output" }
regex = "1.5"
rstest = "0.10"