[package]
name = "clippy-output"
version = "0.1.1"
authors = ["Makoto <makoto@emurasoft.com>"]
edition = "2018"
documentation = "https://docs.rs/clippy-output/"
license = "MIT"
description = "Inputs a string and outputs ascii art of Clippy saying the text."
repository = "https://github.com/MakotoE/clippy-output"

[dependencies]
anyhow = "1.0"
terminal_size = "0.1"
